@@ -1,3 +1,8 @@
+2016-01-07  Danilo Chang  <ray2501@gmail.com>
+
+    * generic/mdb.c: Update source code.
+      Fixups for env_copy with large files (32bit Windows)
+
 2016-01-01  Danilo Chang  <ray2501@gmail.com>
 
     * generic/mdb.c: Update source code.
